# GemetrySandbox

./: CMakeLists.txt  GemetrySandbox.uproject
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/: BPSandboxPawn.uasset  BP_BaseGeometryActor.uasset  NewMap.umap  Untitled.umap
Content/materials/: M_BaseColor.uasset  M_BaseColor_Inst.uasset  M_BaseColor_Inst1.uasset
Source/: GemetrySandbox.Target.cs  GemetrySandboxEditor.Target.cs
Source/GemetrySandbox/: GemetrySandbox.Build.cs  GemetrySandbox.cpp  GemetrySandboxGameModeBase.cpp  GemetrySandboxGameModeBase.h
Source/GemetrySandbox/Private/: BaseGeometryActor.cpp  GeometryHubActor.cpp  SandboxPawn.cpp  SandboxPlayerController.cpp
Source/GemetrySandbox/Public/: BaseActor.h  BaseGeometryActor.h  GeometryHubActor.h  SandboxPawn.h  SandboxPlayerController.h
enc_temp_folder/25246ca3c4fa8e23a83493acbe2b8a/: BaseGeometryActor.h
enc_temp_folder/de536e7cc6e9e028e068a5746ce1bc8/: GeometryHubActor.h
enc_temp_folder/e2632c66f50e196d4e9b266252fbdb/: GeometryHubActor.cpp
enc_temp_folder/e8b22d987bdb33e6e2336a51e0ef6527/: GeometryHubActor.cpp
enc_temp_folder/f3f922624037fd92d0343a795341a133/: GeometryHubActor.h
